adding CSS compression with less

--- a/build.properties
+++ b/build.properties
@@ -5,6 +5,7 @@ git.exe = C:/Program Files/Git/bin/git.exe
 devserver.js = C:/Users/nick/Documents/tools/dev_server/dev_server.js
 # casper.js = C:/Program Files/PhantomJS/casperjs/bin/casperjs
 casper.js = C:/Users/nick/Documents/GAP project/libs/casperjs/bin/casperjs
+lessc = C:/Users/nick/AppData/Roaming/npm/lessc.cmd
 
 # Placeholders
 placeholder.js =        <!-- SCRIPTS -->
