changing build to use file lists instead of managing them manually

--- a/build.properties
+++ b/build.properties
@@ -16,49 +16,59 @@ placeholder.analytics = <!-- ANALYTICS -->
 # JS Scripts
 
 # libraries
-js.lib.nomunge =    http://maps.google.com/maps/api/js?sensor=false, http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js, lib/timeline-2.3.0.js
-js.lib.dev =        app/shim.js, lib/augment-0.3.1.min.js, lib/underscore/underscore.js, lib/jquery/jquery-ui-1.8.16.custom.js, lib/mxn/mxn.js, lib/mxn/mxn.core.js, lib/mxn/mxn.googlev3.core.js, lib/timemap/src/timemap.js, lib/timemap/src/param.js, lib/timemap/src/state.js, lib/timemap/src/loaders/progressive.js, lib/backbone/backbone.js, lib/backbone-spf/spf.js, lib/d3/d3.js
-js.lib.min =        app/shim.js, lib/augment-0.3.1.min.js, lib/underscore/underscore-min.js, lib/jquery/jquery-ui-1.8.16.custom.min.js, lib/mxn/mxn-min.js, lib/mxn/mxn.core-min.js, lib/mxn/mxn.googlev3.core-min.js, lib/timeline-2.3.0.js, lib/timemap/timemap_full.pack.js, lib/backbone/backbone-min.js, lib/backbone-spf/spf.js, lib/d3/d3.min.js
-js.libext =         lib/timemap/src/ext/circle_icons.js, lib/label_utils.js, app/patches.js
+js.lib.nomunge =    http://maps.google.com/maps/api/js?sensor=false,\
+                    http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js,\
+                    lib/timeline-2.3.0.js
+js.lib.dev =        app/shim.js,\
+                    lib/augment-0.3.1.min.js,\
+                    lib/underscore/underscore.js,\
+                    lib/jquery/jquery-ui-1.8.16.custom.js,\
+                    lib/mxn/mxn.js,\
+                    lib/mxn/mxn.core.js,\
+                    lib/mxn/mxn.googlev3.core.js,\
+                    lib/timemap/src/timemap.js,\
+                    lib/timemap/src/param.js,\
+                    lib/timemap/src/state.js,\
+                    lib/timemap/src/loaders/progressive.js,\
+                    lib/backbone/backbone.js,\
+                    lib/backbone-spf/spf.js,\
+                    lib/d3/d3.js
+js.lib.min =        app/shim.js,\
+                    lib/augment-0.3.1.min.js,\
+                    lib/underscore/underscore-min.js,\
+                    lib/jquery/jquery-ui-1.8.16.custom.min.js,\
+                    lib/mxn/mxn-min.js,\
+                    lib/mxn/mxn.core-min.js,\
+                    lib/mxn/mxn.googlev3.core-min.js,\
+                    lib/timeline-2.3.0.js,\
+                    lib/timemap/timemap_full.pack.js,\
+                    lib/backbone/backbone-min.js,\
+                    lib/backbone-spf/spf.js,\
+                    lib/d3/d3.min.js
+js.libext =         lib/timemap/src/ext/circle_icons.js,\
+                    lib/label_utils.js,\
+                    app/patches.js
+
+# app directories
+js.app.models.dir =     app/models
+js.app.views.dir =      app/views
+js.app.layouts.dir =    app/layouts
+js.app.routers.dir =    app/routers
+js.app.templates.dir =  app/templates
 
 # app scripts
-js.app.core =                app/app.js, app/settings.js
+js.app.core =                app/app.js,\
+                             app/settings.js,\
+                             ${js.app.models.dir}/Model.js,\
+                             ${js.app.layouts.dir}/Layout.js,\
+                             ${js.app.routers.dir}/Router.js
 js.app.settings.dev =        app/settings.dev.js
 js.app.settings.production = app/settings.production.js
 
-# models
-js.app.models =     app/models/Model.js, app/models/State.js, app/models/Place.js, app/models/Page.js, app/models/Book.js
-# layouts
-js.app.layouts =    app/layouts/Layout.js, app/layouts/IndexLayout.js
-# views
-js.app.views =      app/views/AppView.js, app/views/BookListView.js, app/views/BookView.js, app/views/BookSummaryView.js,\
-                    app/views/BookReadingView.js, app/views/BookPlaceView.js, \
-                    app/views/BookTitleView.js, app/views/PlaceFrequencyBarsView.js, app/views/BookSummaryTextView.js,\
-                    app/views/PageControlView.js, app/views/PageView.js,\
-                    app/views/InfoWindowView.js, app/views/TimeMapView.js, app/views/PageNavView.js,\
-                    app/views/NavigationView.js, app/views/PlaceSummaryView.js, app/views/RelatedPlacesView.js,\
-                    app/views/BookSummaryMapView.js, app/views/BookPlaceMapView.js, app/views/BookPlaceFlickrView.js,\
-                    app/views/ChangeLinkView.js, app/views/ChangeFormView.js, app/views/MessageView.js
-# routers
-js.app.routers =    app/routers/Router.js
-# templates
-js.app.templates =  app/templates/book-summary-text-template.html, app/templates/page-template.html,\
-                    app/templates/book-title-template.html, app/templates/place-summary-template.html,\
-                    app/templates/info-window-template.html, app/templates/timemap-template.html,\
-                    app/templates/navigation-view-template.html, app/templates/flickr-photo-template.html,\
-                    app/templates/book-list-template.html
-# master lists
-js.files.app =              ${js.app.models}, ${js.app.layouts}, ${js.app.views}, ${js.app.routers}
-js.files.dev =              ${js.lib.nomunge}, ${js.lib.dev}, ${js.libext}, ${js.app.core},\
-                            ${js.app.settings.dev}, ${js.files.app}
-js.files.production =       ${js.libext}, ${js.app.core}, ${js.app.settings.production}, ${js.files.app}
-js.files.production.test =  ${js.libext}, ${js.app.core}, ${js.app.settings.dev}, ${js.files.app}
-
-# CSS Styles
+# CSS files (order matters)
 css.lib =    css/style.css, lib/jquery/css/jquery-ui-1.8.16.custom.css
 css.app =    css/gapvis.css
-# master list
-css.files = ${css.lib}, ${css.app}
+css.files =  ${css.lib}, ${css.app}
 
 # for the dev server
 dev.server.port = 8080
