index view working with less

--- a/build.properties
+++ b/build.properties
@@ -67,8 +67,7 @@ js.app.settings.production = app/settings.production.js
 
 # CSS files (order matters)
 css.lib =    css/style.css, lib/jquery/css/jquery-ui-1.8.16.custom.css
-css.app =    css/gapvis.css
-css.files =  ${css.lib}, ${css.app}
+css.app =    css/gapvis.less
 
 # for the dev server
 dev.server.port = 8080
