--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
 <project name="gapvis" default="build-dev">
+    <tstamp>
+        <format property="build.time" pattern="yyddmmhhmmss" />
+    </tstamp>
     
     <!-- define ant-contrib tasks -->
     <taskdef resource="net/sf/antcontrib/antlib.xml">
@@ -18,11 +21,11 @@
     <property name="index.target" value="index.html" />
     
     
-    <property name="js.concat" value="scripts-all.js" />
+    <property name="js.concat" value="scripts-${build.time}.js" />
     <property name="js.concat.build" value="${build.dir}/${js.concat}" />
     <property name="js.concat.target" value="${target.dir}/${js.concat}" />
     
-    <property name="css.concat" value="styles-all.css" />
+    <property name="css.concat" value="styles-${build.time}.css" />
     <property name="css.concat.build" value="${build.dir}/${css.concat}" />
     <property name="css.concat.target" value="${target.dir}/${css.concat}" />
     
@@ -59,7 +62,7 @@
     
     <!-- Build Targets -->
     <target name="build-dev"
-            depends="clean-production-build,
+            depends="clean-build,
                      start-build,
                      build-js-dev, 
                      build-css-dev,
@@ -67,7 +70,8 @@
                      finish-build"/>
             
     <target name="-build-production"
-            depends="start-build,
+            depends="clean-build,
+                     start-build,
                      build-js-production, 
                      build-css-production,
                      build-templates,
@@ -93,6 +97,7 @@
     </target>
             
     <!-- Shared Targets -->
+    
     <target name="start-build">
         <mkdir dir="${build.dir}"/>
         <copy file="${index.template}" tofile="${index.build}"/>
@@ -101,6 +106,45 @@
     <target name="finish-build">
         <copy file="${index.build}" tofile="${index.target}"/>
         <delete dir="${build.dir}" />
+    </target>
+    
+    <target name="-build-css">
+        <echo>Creating tags for CSS files</echo>
+        <!-- Put in css files -->
+        <for list="${css.files}" param="file.url" trim="true">
+            <sequential>
+                <replace file="${index.build}" 
+                    token="${placeholder.css}"
+                    value="&lt;link rel=&quot;stylesheet&quot; href=&quot;@{file.url}&quot;&gt;${placeholder.css}"/>
+            </sequential>
+        </for>
+        <!-- Clean up placeholder -->
+        <replace file="${index.build}" token="${placeholder.css}" value=""/>
+    </target>
+    
+    <target name="-less-concat-css">
+        <echo>Less-ifying and concatenating CSS files</echo>
+        <condition property="compress.argument" value="--yui-compress" else="">
+            <isset property="css.less.compress"/>
+        </condition>
+        <for list="${css.less.files}" param="file" trim="true">
+            <sequential>
+                <echo>Less-ifying @{file}</echo>
+                <!-- compress -->
+                <exec executable="${lessc}" failonerror="true">
+                    <arg line="${compress.argument}"/>
+                    <arg line="@{file} > @{file}.min.tmp"/>
+                </exec>
+                <!-- add to file -->
+                <concat destfile="${css.concat.build}" append="yes">
+                    <fileset file="@{file}.min.tmp"/>
+                </concat>
+                <!-- clean up -->
+                <delete file="@{file}.min.tmp"/>
+            </sequential>
+        </for>
+        <!-- move build to target -->
+        <copy file="${css.concat.build}" tofile="${css.concat.target}"/>
     </target>
     
     <target name="build-templates">
@@ -138,19 +182,12 @@
         <!-- Clean up placeholder -->
         <replace file="${index.build}" token="${placeholder.js}" value=""/>
     </target>
-    
+
     <target name="build-css-dev">
-        <echo>Creating tags for dev CSS files</echo>
-        <!-- Put in css files -->
-        <for list="${css.files}" param="file.url" trim="true">
-            <sequential>
-                <replace file="${index.build}" 
-                    token="${placeholder.css}"
-                    value="&lt;link rel=&quot;stylesheet&quot; href=&quot;@{file.url}&quot;&gt;${placeholder.css}"/>
-            </sequential>
-        </for>
-        <!-- Clean up placeholder -->
-        <replace file="${index.build}" token="${placeholder.css}" value=""/>
+        <property name="css.less.files" value="${css.app}"/>
+        <property name="css.files" value="${css.lib}, ${css.concat.target}"/>
+        <ant target="-less-concat-css"/>
+        <ant target="-build-css"/>
     </target>
     
     <!-- Production Targets -->
@@ -201,41 +238,12 @@
         <replace file="${index.build}" token="${placeholder.js}" value=""/>
     </target>
     
-    
-    <target name="css.minify.concat">
-        <echo>Minifying and concatenating CSS files</echo>
-        <!-- Compress and add extensions and apps -->
-        <for list="${css.files}" param="file" trim="true">
-            <sequential>
-                <echo>Compressing @{file}</echo>
-                <!-- compress -->
-                <exec executable="${lessc}" failonerror="true">
-                    <arg line="--yui-compress @{file} > @{file}.min.tmp"/>
-                </exec>
-                <!-- add to file -->
-                <concat destfile="${css.concat.build}" append="yes">
-                    <fileset file="@{file}.min.tmp"/>
-                </concat>
-                <!-- clean up -->
-                <delete file="@{file}.min.tmp"/>
-            </sequential>
-        </for>
-    </target>
-    
-    <target name="build-css-production" depends="css.minify.concat">
-        <echo>Creating tags for production CSS files</echo>
-        <!-- move build to production -->
-        <copy file="${css.concat.build}" tofile="${css.concat.target}"/>
-        <!-- Put in css files -->
-        <for list="${css.concat.target}" param="file.url" trim="true">
-            <sequential>
-                <replace file="${index.build}" 
-                    token="${placeholder.css}"
-                    value="&lt;link rel=&quot;stylesheet&quot; href=&quot;@{file.url}&quot;&gt;${placeholder.css}"/>
-            </sequential>
-        </for>
-        <!-- Clean up placeholder -->
-        <replace file="${index.build}" token="${placeholder.css}" value=""/>
+    <target name="build-css-production">
+        <property name="css.less.compress" value="true"/>
+        <property name="css.less.files" value="${css.lib}, ${css.app}"/>
+        <property name="css.files" value="${css.concat.target}"/>
+        <ant target="-less-concat-css"/>
+        <ant target="-build-css"/>
     </target>
     
     <target name="build-analytics">
@@ -259,10 +267,14 @@
         <copy file="${index.build}.tmp" tofile="${index.build}"/>
     </target>
     
-    <target name="clean-production-build">
+    <target name="clean-build">
         <delete file="${index.target}"/>
-        <delete file="${js.concat.target}"/>
-        <delete file="${css.concat.target}"/>
+        <delete>
+            <fileset dir="." includes="scripts-*.js"/>
+        </delete>
+        <delete>
+            <fileset dir="." includes="styles-*.css"/>
+        </delete>
     </target>
     
     <!-- Deployment targets -->
