book summary working, index test passing

--- a/build.properties
+++ b/build.properties
@@ -61,7 +61,8 @@ js.app.core =                app/app.js,\
                              app/settings.js,\
                              ${js.app.models.dir}/Model.js,\
                              ${js.app.layouts.dir}/Layout.js,\
-                             ${js.app.routers.dir}/Router.js
+                             ${js.app.routers.dir}/Router.js,\
+                             ${js.app.views.dir}/BookView.js
 js.app.settings.dev =        app/settings.dev.js
 js.app.settings.production = app/settings.production.js
 
