--- a/config/build.properties
+++ b/config/build.properties
@@ -5,7 +5,8 @@ git.exe = C:/Program Files/Git/bin/git.exe
 devserver.js = C:/Users/nick/Documents/tools/dev_server/dev_server.js
 # casper.js = C:/Program Files/PhantomJS/casperjs/bin/casperjs
 casper.js = C:/Users/nick/Documents/GAP project/libs/casperjs/bin/casperjs
-lessc = C:/Users/nick/AppData/Roaming/npm/lessc.cmd
+lessc = lessc.cmd
+uglify.js = uglifyjs.cmd
 
 # Placeholders
 placeholder.js =        <!-- SCRIPTS -->
@@ -57,14 +58,14 @@ js.app.routers.dir =    app/routers
 js.app.templates.dir =  app/templates
 
 # app scripts
-js.app.core =                app/app.js,\
-                             app/settings.js,\
-                             ${js.app.models.dir}/Model.js,\
-                             ${js.app.layouts.dir}/Layout.js,\
-                             ${js.app.routers.dir}/Router.js,\
-                             ${js.app.views.dir}/BookView.js
-js.app.settings.dev =        app/settings.dev.js
-js.app.settings.production = app/settings.production.js
+js.app.init =               app/app.js
+js.app.core =               app/settings.js,\
+                            ${js.app.models.dir}/Model.js,\
+                            ${js.app.layouts.dir}/Layout.js,\
+                            ${js.app.routers.dir}/Router.js,\
+                            ${js.app.views.dir}/BookView.js
+js.settings.dev =           config/settings.dev.js
+js.settings.production =    config/settings.production.js
 
 # CSS files (order matters)
 css.lib =    css/style.css, lib/jquery/css/jquery-ui-1.8.16.custom.css
