--- a/config/build.properties
+++ b/config/build.properties
@@ -20,6 +20,9 @@ placeholder.analytics = <!-- ANALYTICS -->
 js.lib.nomunge =    http://maps.google.com/maps/api/js?sensor=false,\
                     http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js,\
                     lib/timeline-2.3.0.js
+# shim for local dev - no maps
+js.lib.local =      lib/jquery/jquery-1.6.2.min.js,\
+                    lib/timeline-2.3.0.js
 js.lib.dev =        app/shim.js,\
                     lib/augment-0.3.1.min.js,\
                     lib/underscore/underscore.js,\
