--- a/config/build.properties
+++ b/config/build.properties
@@ -25,6 +25,7 @@ js.lib.local =      lib/jquery/jquery-1.6.2.min.js,\
                     lib/timeline-2.3.0.js
 js.lib.dev =        app/shim.js,\
                     lib/augment-0.3.1.min.js,\
+                    lib/requirejs/require.js,\
                     lib/underscore/underscore.js,\
                     lib/jquery/jquery-ui-1.8.16.custom.js,\
                     lib/mxn/mxn.js,\
@@ -71,7 +72,7 @@ js.settings.dev =           config/settings.dev.js
 js.settings.production =    config/settings.production.js
 
 # CSS files (order matters)
-css.lib =    css/style.css, lib/jquery/css/jquery-ui-1.8.16.custom.css
+css.lib =    lib/bootstrap/css/bootstrap.css, lib/jquery/css/jquery-ui-1.8.16.custom.css
 css.app =    css/gapvis.less
 
 # for the dev server
