--- a/config/build.properties
+++ b/config/build.properties
@@ -27,7 +27,6 @@ js.lib.dev =        app/shim.js,\
                     lib/augment-0.3.1.min.js,\
                     lib/requirejs/require.js,\
                     lib/underscore/underscore.js,\
-                    lib/jquery/jquery-ui-1.8.16.custom.js,\
                     lib/bootstrap/js/bootstrap-transition.js,\
                     lib/mxn/mxn.js,\
                     lib/mxn/mxn.core.js,\
@@ -72,9 +71,8 @@ js.app.core =               app/settings.js,\
 js.settings.dev =           config/settings.dev.js
 js.settings.production =    config/settings.production.js
 
-# CSS files (order matters)
-css.lib =    lib/jquery/css/jquery-ui-1.8.16.custom.css
-css.app =    lib/bootstrap/less/bootstrap.less, css/gapvis.less
+# CSS files
+css.app =    css/gapvis.less
 
 # for the dev server
 dev.server.port = 8080
