Tweaking styles, using bootstrap buttons

--- a/config/build.properties
+++ b/config/build.properties
@@ -18,16 +18,17 @@ placeholder.analytics = <!-- ANALYTICS -->
 
 # libraries
 js.lib.nomunge =    http://maps.google.com/maps/api/js?sensor=false,\
-                    http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js,\
+                    http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js,\
                     lib/timeline-2.3.0.js
 # shim for local dev - no maps
-js.lib.local =      lib/jquery/jquery-1.6.2.min.js,\
+js.lib.local =      lib/jquery/jquery-1.7.2.min.js,\
                     lib/timeline-2.3.0.js
 js.lib.dev =        app/shim.js,\
                     lib/augment-0.3.1.min.js,\
                     lib/requirejs/require.js,\
                     lib/underscore/underscore.js,\
                     lib/bootstrap/js/bootstrap-transition.js,\
+                    lib/bootstrap/js/bootstrap-button.js,\
                     lib/mxn/mxn.js,\
                     lib/mxn/mxn.core.js,\
                     lib/mxn/mxn.googlev3.core.js,\
