--- a/config/build.properties
+++ b/config/build.properties
@@ -23,7 +23,7 @@ js.lib.nomunge =    http://maps.google.com/maps/api/js?sensor=false,\
 # shim for local dev - no maps
 js.lib.local =      lib/jquery/jquery-1.7.2.min.js,\
                     lib/timeline-2.3.0.js
-js.lib.dev =        app/shim.js,\
+js.lib.dev =        app/util/shim.js,\
                     lib/augment-0.3.1.min.js,\
                     lib/requirejs/require.js,\
                     lib/underscore/underscore.js,\
@@ -39,7 +39,7 @@ js.lib.dev =        app/shim.js,\
                     lib/backbone/backbone.js,\
                     lib/backbone-spf/spf.js,\
                     lib/d3/d3.js
-js.lib.min =        app/shim.js,\
+js.lib.min =        app/util/shim.js,\
                     lib/augment-0.3.1.min.js,\
                     lib/underscore/underscore-min.js,\
                     lib/jquery/jquery-ui-1.8.16.custom.min.js,\
@@ -53,7 +53,7 @@ js.lib.min =        app/shim.js,\
                     lib/d3/d3.min.js
 js.libext =         lib/timemap/src/ext/circle_icons.js,\
                     lib/label_utils.js,\
-                    app/patches.js
+                    app/util/patches.js
 
 # app directories
 js.app.models.dir =     app/models
