Adding change form back in

--- a/config/build.properties
+++ b/config/build.properties
@@ -29,6 +29,7 @@ js.lib.dev =        app/util/shim.js,\
                     lib/underscore/underscore.js,\
                     lib/bootstrap/js/bootstrap-transition.js,\
                     lib/bootstrap/js/bootstrap-button.js,\
+                    lib/bootstrap/js/bootstrap-modal.js,\
                     lib/mxn/mxn.js,\
                     lib/mxn/mxn.core.js,\
                     lib/mxn/mxn.googlev3.core.js,\
